--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover,user-scalable=no"/>
 <meta name="apple-mobile-web-app-capable" content="yes"/>
-<title>Cozy Life 3D — Creator</title>
+<title>Cozy Life 3D — Creator + Outfits</title>
 <style>
   *{box-sizing:border-box}html,body{height:100%;margin:0}
   body{background:#0e141b;color:#e7ecf2;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;overflow:hidden}
@@ -30,7 +30,6 @@
   #toast{position:fixed;left:50%;top:22%;transform:translateX(-50%);background:rgba(0,0,0,.6);padding:10px 14px;border-radius:10px;backdrop-filter:blur(8px);z-index:99}
   #centerCam{position:fixed;left:10px;bottom:140px;z-index:8;border:0;border-radius:10px;background:#1a2330;color:#e7ecf2;padding:8px 10px}
   canvas{position:fixed;inset:0}
-  /* simple inputs */
   #p-me label{display:flex;flex-direction:column;gap:6px;font-size:14px}
   #p-me input[type=range], #p-me select{width:100%;padding:8px;border:0;border-radius:10px;background:#17212c;color:#e7ecf2}
 </style>
@@ -80,7 +79,7 @@
     <button data-act="clean">Clean 🧹</button>
     <button data-act="save">Save 💾</button>
   </div>
-  <div class="meta">Tip: **Tap the floor** to walk. **Tap sofa/bed/shower/counter** to auto‑walk and do it.</div>
+  <div class="meta">Tip: **Tap the floor** to walk. **Tap sofa/bed/shower/counter** to auto-walk and do it.</div>
 </section>
 
 <!-- jobs -->
@@ -102,7 +101,7 @@
   </div>
 </section>
 
-<!-- ME: simple character creator -->
+<!-- ME: simple character creator + outfits -->
 <section id="p-me" class="panel">
   <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px">
     <label>Skin tone
@@ -145,8 +144,11 @@
       </div>
     </div>
 
-    <div style="grid-column:1 / span 2;display:flex;gap:8px;align-items:center">
-      <span class="badge">Outfit</span><button id="outfit">Change</button>
+    <div style="grid-column:1 / span 2;display:flex;gap:8px;align-items:center;flex-wrap:wrap">
+      <span class="badge">Outfit</span>
+      <button id="outfitPrev">◀︎</button>
+      <span id="outfitName" class="badge">Casual</span>
+      <button id="outfitNext">▶︎</button>
       <span class="badge">Time</span><input id="time" type="range" min="0.5" max="6" step="0.5" value="2" style="width:160px"><span id="tLbl" class="badge">2 min/sec</span>
     </div>
   </div>
@@ -169,12 +171,20 @@ const $=id=>document.getElementById(id), $$=s=>Array.from(document.querySelector
 const clamp=(n,a,b)=>Math.max(a,Math.min(b,n));
 const hour=t=>Math.floor((t/60)%24);
 const timeFmt=m=>{const h=hour(m),mi=Math.floor(m%60),ap=h>=12?'PM':'AM',hh=((h+11)%12+1);return `${hh}:${String(mi).padStart(2,'0')} ${ap}`;}
-const OUTFITS=[{top:0xa86dff,bottom:0x22252d,shoes:0xe7ecf2,name:'Casual'},{top:0x2ec27e,bottom:0x1f2a22,shoes:0xe8ecf1,name:'Work'},{top:0x4fd1ff,bottom:0x14202a,shoes:0xc8f7ff,name:'Gym'},{top:0xff6b9a,bottom:0x2a2e39,shoes:0xf5d36b,name:'Night Out'}];
 function toast(msg,ms=1200){const t=$('toast'); t.textContent=msg; t.hidden=false; clearTimeout(toast._h); toast._h=setTimeout(()=>t.hidden=true,ms);}
+
+/* ---------- outfits (top/bottom/shoes + shoe style) ---------- */
+const OUTFITS=[
+  {name:'Casual', top:0xa86dff, bottom:0x22252d, shoes:0xe7ecf2, shoe:'sneaker'},
+  {name:'Work',   top:0x2ec27e, bottom:0x1f2a22, shoes:0xf1f5f9, shoe:'flat'},
+  {name:'Gym',    top:0x4fd1ff, bottom:0x14202a, shoes:0xc8f7ff, shoe:'sneaker'},
+  {name:'Night',  top:0xff6b9a, bottom:0x2a2e39, shoes:0xf5d36b, shoe:'heel'},
+  {name:'Cozy',   top:0x8ad7a0, bottom:0x314b3c, shoes:0xeaeaea, shoe:'boot'}
+];
 
 /* ---------- state ---------- */
 const S={room:'living',t:7*60,speed:2,energy:70,hunger:30,fun:40,clean:60,edu:10,rep:10,money:120,job:null,npcs:[],sel:null,lastNpcDay:-1};
-const A={skin:'#2c1f16',hair:'#0c0b0c',hairStyle:'curls',body:'slim',outfit:0};
+const A={skin:'#2c1f16',hair:'#0c0b0c',hairStyle:'curls',body:'curvy',outfit:0};
 const CC={height:1.00,head:1.00,eyeSize:1.00,eyeGap:0,nose:1.00,mouth:1.00}; // creator sliders
 const JOBS={barista:{name:'Barista',open:[6,14],pay:16,req:0},stripper:{name:'Performer (Club)',open:[19,2],pay:28,req:0,audition:true},lawyer:{name:'Junior Lawyer',open:[9,19],pay:55,req:70},doctor:{name:'Resident Doctor',open:[7,19],pay:60,req:85}};
 const rand=n=>Math.floor(Math.random()*n);
@@ -191,13 +201,16 @@ $('p-jobs').addEventListener('click',e=>{
 $('tabs').addEventListener('click',e=>{const b=e.target.closest('button'); if(!b)return; $$('#tabs button').forEach(x=>x.classList.remove('active')); b.classList.add('active'); $$('.panel').forEach(p=>p.classList.remove('active')); $('p-'+b.dataset.tab).classList.add('active');});
 $('rooms').addEventListener('click',e=>{const r=e.target.getAttribute('data-room'); if(!r)return; switchRoom(r,true);});
 $('acts').addEventListener('click',e=>{const k=e.target.getAttribute('data-act'); if(!k) return; ({eat, sleep, shower, tv, study, work, clean, save})[k](); setBars();});
-$('outfit').addEventListener('click',()=>{A.outfit=(A.outfit+1)%OUTFITS.length; applyOutfit(); toast('Outfit: '+OUTFITS[A.outfit].name);});
 $('skin').addEventListener('change',e=>{A.skin=e.target.value; drawFace();});
 $('hairStyle').addEventListener('change',e=>{A.hairStyle=e.target.value; drawFace();});
-$('hairColor').addEventListener('change',e=>{A.hair=e.target.value; drawFace();});
+$('hairColor').addEventListener('change',e=>{A.hair=e.target.value; hair.material.color.set(A.hair); drawFace();});
+
+/* outfit controls */
 const tSlider=$('time'), tLbl=$('tLbl'); tSlider.value=S.speed; tLbl.textContent=S.speed+' min/sec';
 tSlider.addEventListener('input',()=>{S.speed=parseFloat(tSlider.value); tLbl.textContent=S.speed+' min/sec';});
-$('load').addEventListener('click',load); $('reset').addEventListener('click',()=>{localStorage.removeItem('cozy3d_creator');location.reload();});
+$('outfitPrev').addEventListener('click',()=>{A.outfit=(A.outfit-1+OUTFITS.length)%OUTFITS.length; applyOutfit();});
+$('outfitNext').addEventListener('click',()=>{A.outfit=(A.outfit+1)%OUTFITS.length; applyOutfit();});
+$('load').addEventListener('click',load); $('reset').addEventListener('click',()=>{localStorage.removeItem('cozy3d_creator2');location.reload();});
 $('centerCam').addEventListener('click',resetView);
 
 /* creator inputs */
@@ -224,8 +237,7 @@ $('ccRandom').addEventListener('click', ()=>{
   applyCreator();
 });
 $('ccSave').addEventListener('click', ()=>{
-  const saved = JSON.parse(localStorage.getItem('cozy3d_creator')||'{}');
-  localStorage.setItem('cozy3d_creator', JSON.stringify({ ...(saved||{}), S, A, CC }));
+  localStorage.setItem('cozy3d_creator2', JSON.stringify({S,A,CC}));
   toast('Look saved');
 });
 
@@ -243,9 +255,10 @@ const floorGeo=new THREE.PlaneGeometry(20,14);
 const floors={
   living : new THREE.Mesh(floorGeo,new THREE.MeshStandardMaterial({color:0x202830,roughness:.9})),
   kitchen: new THREE.Mesh(floorGeo,new THREE.MeshStandardMaterial({color:0x303820,roughness:.85})),
-  bathroom:new THREE.Mesh(floorGeo,new THREE.MeshStandardMaterial({color:0x283036,roughness:.85})),
-  bedroom : new THREE.Mesh(floorGeo,new THREE.MeshStandardMaterial({color:0x2e2530,roughness:.85}))
+  bathroom:new THREE.MeshStandardMaterial?null:null
 };
+floors.bathroom=new THREE.Mesh(floorGeo,new THREE.MeshStandardMaterial({color:0x283036,roughness:.85}));
+floors.bedroom = new THREE.Mesh(floorGeo,new THREE.MeshStandardMaterial({color:0x2e2530,roughness:.85}));
 Object.values(floors).forEach(m=>{m.rotation.x=-Math.PI/2;m.receiveShadow=true;});
 
 /* Furniture */
@@ -268,32 +281,73 @@ const DOORS={living:[{x:-9,z:0,to:'kitchen'},{x:9,z:0,to:'bathroom'}],
              bedroom:[{x:9,z:0,to:'kitchen'}]};
 function drawDoors(r){ doorGroup.clear(); (DOORS[r]||[]).forEach(d=>{const m=box(0.8,2.2,0.2,0x1a2330); m.position.set(d.x,1.1,d.z); m.userData.to=d.to; doorGroup.add(m);}); }
 
-/* Player (simple rig + face plate) */
+/* -------- Player (rounder body + arms + shoes + face plate) -------- */
 const player=new THREE.Group(); scene.add(player);
-const faceCan=document.createElement('canvas'); faceCan.width=256; faceCan.height=256; const faceTex=new THREE.CanvasTexture(faceCan);
-const torso=new THREE.Mesh(new THREE.CapsuleGeometry(0.45,1.2,8,16), new THREE.MeshStandardMaterial({color:OUTFITS[A.outfit].top})); torso.position.y=1.6; torso.castShadow=true; player.add(torso);
-const legL=new THREE.Mesh(new THREE.CapsuleGeometry(0.2,0.6,6,12), new THREE.MeshStandardMaterial({color:OUTFITS[A.outfit].bottom})); legL.position.set(-0.2,0.6,0); player.add(legL);
-const legR=legL.clone(); legR.position.x=0.2; player.add(legR);
-const head=new THREE.Mesh(new THREE.SphereGeometry(0.35,24,24), new THREE.MeshStandardMaterial({map:faceTex})); head.position.y=2.4; player.add(head);
-const hair=new THREE.Mesh(new THREE.SphereGeometry(0.37,24,24,0,Math.PI*2,0,Math.PI/1.8), new THREE.MeshStandardMaterial({color:A.hair})); hair.position.copy(head.position); hair.position.y+=0.02; player.add(hair);
-// flat face plate so the face is always readable
-const facePlate = new THREE.Mesh(new THREE.PlaneGeometry(0.58,0.58), new THREE.MeshBasicMaterial({map:faceTex,transparent:true}));
-facePlate.position.set(0,2.4,0.34); player.add(facePlate);
 
+const faceCan=document.createElement('canvas'); faceCan.width=256; faceCan.height=256; const faceTex=new THREE.CanvasTexture(faceCan);
+
+// rounded, tapered torso (capsule) with slight waist/hip shaping by scale
+const torso=new THREE.Mesh(new THREE.CapsuleGeometry(0.46,1.25,12,20), new THREE.MeshStandardMaterial({color:OUTFITS[A.outfit].top,roughness:.7}));
+torso.position.y=1.65; torso.castShadow=true; player.add(torso);
+
+// shoulders (subtle)
+const shoulderL=new THREE.Mesh(new THREE.SphereGeometry(0.23,20,20), new THREE.MeshStandardMaterial({color:OUTFITS[A.outfit].top}));
+const shoulderR=shoulderL.clone(); shoulderL.position.set(-0.46,2.15,0); shoulderR.position.set(0.46,2.15,0); player.add(shoulderL,shoulderR);
+
+// arms (thin capsules)
+const armGeo=new THREE.CapsuleGeometry(0.16,0.55,8,16);
+const armL=new THREE.Mesh(armGeo,new THREE.MeshStandardMaterial({color:OUTFITS[A.outfit].top})); armL.position.set(-0.62,1.85,0); armL.rotation.z= Math.PI/12; player.add(armL);
+const armR=new THREE.Mesh(armGeo,new THREE.MeshStandardMaterial({color:OUTFITS[A.outfit].top})); armR.position.set(0.62,1.85,0); armR.rotation.z=-Math.PI/12; player.add(armR);
+
+// legs (capsules)
+const legGeo=new THREE.CapsuleGeometry(0.21,0.7,10,18);
+const legL=new THREE.Mesh(legGeo,new THREE.MeshStandardMaterial({color:OUTFITS[A.outfit].bottom})); legL.position.set(-0.2,0.65,0); player.add(legL);
+const legR=legL.clone(); legR.position.x=0.2; player.add(legR);
+
+// shoes (styles)
+let shoeL, shoeR;
+function buildShoes(style){
+  if(shoeL){ player.remove(shoeL,shoeR); }
+  const mat=new THREE.MeshStandardMaterial({color:OUTFITS[A.outfit].shoes,metalness:.1,roughness:.6});
+  if(style==='heel'){
+    shoeL=new THREE.Mesh(new THREE.ConeGeometry(0.22,0.25,18),mat); shoeL.rotation.x=Math.PI; shoeL.position.set(-0.2,0.08,0.05);
+    shoeR=shoeL.clone(); shoeR.position.x=0.2;
+  }else if(style==='boot'){
+    shoeL=new THREE.Mesh(new THREE.CylinderGeometry(0.22,0.22,0.35,18),mat); shoeL.position.set(-0.2,0.18,0.1);
+    shoeR=shoeL.clone(); shoeR.position.x=0.2;
+  }else{ // sneaker/flat
+    shoeL=new THREE.Mesh(new THREE.BoxGeometry(0.38,0.18,0.62),mat); shoeL.position.set(-0.2,0.1,0.1);
+    shoeR=shoeL.clone(); shoeR.position.x=0.2;
+  }
+  shoeL.castShadow=shoeR.castShadow=true; player.add(shoeL,shoeR);
+}
+
+// head + hair
+const head=new THREE.Mesh(new THREE.SphereGeometry(0.35,28,28), new THREE.MeshStandardMaterial({map:faceTex,roughness:.6}));
+head.position.y=2.45; head.castShadow=true; player.add(head);
+const hair=new THREE.Mesh(new THREE.SphereGeometry(0.37,28,28,0,Math.PI*2,0,Math.PI/1.8), new THREE.MeshStandardMaterial({color:A.hair,roughness:.7}));
+hair.position.copy(head.position); hair.position.y+=0.02; player.add(hair);
+
+// face plate that always renders on top (so you always see features)
+const facePlate = new THREE.Mesh(
+  new THREE.PlaneGeometry(0.62,0.62),
+  new THREE.MeshBasicMaterial({map:faceTex,transparent:true,depthTest:false,depthWrite:false})
+);
+facePlate.renderOrder = 999;
+facePlate.position.set(0,2.45,0.45);
+player.add(facePlate);
+
+/* drawing the face with sliders */
 function drawFace(){
   const c = faceCan.getContext('2d');
   c.clearRect(0,0,256,256);
-  // circular mask
   c.save(); c.beginPath(); c.arc(128,128,112,0,Math.PI*2); c.clip();
-  // skin
   c.fillStyle = A.skin; c.fillRect(0,0,256,256);
-  // hair front/bangs
   c.fillStyle = A.hair;
   if(A.hairStyle==='bun'){ c.beginPath(); c.arc(128,44,26,0,Math.PI*2); c.fill(); c.fillRect(64,58,128,22); }
   else if(A.hairStyle==='curls'){ for(let i=0;i<20;i++){ const x=40+i*9, y=58+Math.sin(i)*2; c.beginPath(); c.arc(x,y,10,0,Math.PI*2); c.fill(); } }
   else if(A.hairStyle==='braids'){ for(let i=0;i<8;i++){ c.fillRect(80+i*8,58,4,28); } }
   else { c.fillRect(70,58,116,20); }
-  // eyes with sliders
   const es = 10*CC.eyeSize, gap = 10 + CC.eyeGap;
   c.fillStyle="#fff";
   c.fillRect(128-gap-(es+6)/2,108, es+6, es);
@@ -301,20 +355,32 @@ function drawFace(){
   c.fillStyle="#111";
   c.fillRect(128-gap-es/2,110, es*0.6, es*0.6);
   c.fillRect(128+gap-es/2,110, es*0.6, es*0.6);
-  // nose
   c.fillStyle="#00000033";
-  const noseL = 12*CC.nose;
-  c.beginPath(); c.moveTo(128,128); c.lineTo(124,128+noseL); c.lineTo(132,128+noseL); c.closePath(); c.fill();
-  // mouth
-  const mw = 28*CC.mouth;
-  c.fillStyle="#b66"; c.fillRect(128-mw/2,160, mw, 6);
-  c.restore();
-  faceTex.needsUpdate=true;
+  const noseL = 12*CC.nose; c.beginPath(); c.moveTo(128,128); c.lineTo(124,128+noseL); c.lineTo(132,128+noseL); c.closePath(); c.fill();
+  const mw = 28*CC.mouth; c.fillStyle="#b66"; c.fillRect(128-mw/2,160, mw, 6);
+  c.restore(); faceTex.needsUpdate=true;
 }
-function applyOutfit(){ torso.material.color.setHex(OUTFITS[A.outfit].top); legL.material.color.setHex(OUTFITS[A.outfit].bottom); legR.material.color.setHex(OUTFITS[A.outfit].bottom); }
-function applyCreator(){ player.scale.set(1, CC.height, 1); head.scale.set(CC.head,CC.head,CC.head); drawFace(); }
-function applyBody(){ applyCreator(); } // keep simple
-drawFace(); applyOutfit(); applyCreator();
+
+/* outfit + creator application */
+function applyOutfit(){
+  const o=OUTFITS[A.outfit];
+  $('outfitName').textContent=o.name;
+  torso.material.color.setHex(o.top);
+  armL.material.color.setHex(o.top); armR.material.color.setHex(o.top); shoulderL.material.color.setHex(o.top); shoulderR.material.color.setHex(o.top);
+  legL.material.color.setHex(o.bottom); legR.material.color.setHex(o.bottom);
+  buildShoes(o.shoe);
+}
+function applyCreator(){
+  // overall height + head size
+  player.scale.set(1, CC.height, 1);
+  head.scale.set(CC.head,CC.head,CC.head);
+  // subtle waist/hip shaping for curvy vs athletic
+  const hip = (A.body==='curvy'?1.12:(A.body==='athletic'?1.03:1.0));
+  const waist = (A.body==='curvy'?0.94:(A.body==='athletic'?0.98:1.0));
+  torso.scale.set(hip,1,hip);
+  torso.scale.x*=waist; torso.scale.z*=waist; // taper a bit
+  drawFace();
+}
 
 /* NPCs */
 const npcs=new THREE.Group(); scene.add(npcs);
@@ -383,10 +449,12 @@ function work(){ if(!S.job) return toast('No job yet'); const j=JOBS[S.job], h=h
   S.money+=Math.floor(pay*perf); S.energy=clamp(S.energy-12*hrs/2,0,100); S.hunger=clamp(S.hunger+10*hrs/2,0,100); S.fun=clamp(S.fun+(S.job==='stripper'?4:-4),0,100); S.clean=clamp(S.clean-6*hrs/2,0,100);
   timePass(hrs*60); toast(`Worked ${hrs}h, earned $${Math.floor(pay*perf)}`);}
 function clean(){ S.clean=clamp(S.clean+28,0,100); S.energy=clamp(S.energy-5,0,100); timePass(30); }
-function save(){ localStorage.setItem('cozy3d_creator',JSON.stringify({S,A,CC})); toast('Saved'); }
-function load(){ const raw=localStorage.getItem('cozy3d_creator'); if(!raw) return toast('No save'); try{ const d=JSON.parse(raw); Object.assign(S,d.S||{}); Object.assign(A,d.A||{}); Object.assign(CC,d.CC||{}); // restore creator
-  // reflect sliders
+function save(){ localStorage.setItem('cozy3d_creator2',JSON.stringify({S,A,CC})); toast('Saved'); }
+function load(){ const raw=localStorage.getItem('cozy3d_creator2'); if(!raw) return toast('No save'); try{ const d=JSON.parse(raw); Object.assign(S,d.S||{}); Object.assign(A,d.A||{}); Object.assign(CC,d.CC||{}); 
+  // reflect sliders + visuals
   ccHeight.value=CC.height; ccHead.value=CC.head; ccEyeSize.value=CC.eyeSize; ccEyeGap.value=CC.eyeGap; ccNose.value=CC.nose; ccMouth.value=CC.mouth;
+  $('skin').value=A.skin; $('hairStyle').value=A.hairStyle; $('hairColor').value=A.hair;
+  hair.material.color.set(A.hair);
   applyOutfit(); applyCreator(); drawFace(); setBars(); $('job').textContent=S.job?JOBS[S.job].name:'Unemployed'; switchRoom(S.room,true); toast('Loaded'); }catch{ toast('Load failed'); }}
 function setBars(){ $('bEnergy').style.width=S.energy+'%'; $('bHunger').style.width=(100-S.hunger)+'%'; $('bFun').style.width=S.fun+'%'; $('bClean').style.width=S.clean+'%'; $('bEdu').style.width=S.edu+'%'; $('bRep').style.width=S.rep+'%'; $('money').textContent=Math.floor(S.money); $('clock').textContent=timeFmt(S.t); $('job').textContent=S.job?JOBS[S.job].name:'Unemployed'; }
 function bump(k,v){ S[k]=clamp(S[k]+v,0,100); }
@@ -396,7 +464,7 @@ function randName(){const a=['Alex','Jordan','Taylor','Riley','Casey','Avery','K
 function cryptoRandom(){return Math.random().toString(36).slice(2); }
 
 /* Boot */
-function boot(){ switchRoom('living',true); spawnNpc(); renderNpcList(); setBars(); requestAnimationFrame(tick); }
+function boot(){ switchRoom('living',true); applyOutfit(); applyCreator(); drawFace(); spawnNpc(); renderNpcList(); setBars(); requestAnimationFrame(tick); }
 boot();
 })();</script>
 </body>
